--- a/Langchain-Agent-Insurance.ipynb
+++ b/Langchain-Agent-Insurance.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM02fIazi7wYc0o91POXC95",
+      "authorship_tag": "ABX9TyOsQSGCPWKz3CspzbNxzKHW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -68,12 +68,12 @@
       ],
       "metadata": {
         "id": "IWrCvpKaENeu",
-        "outputId": "e62ed923-c53c-4ffa-eede-f5cf981d40b2",
+        "outputId": "626a2c2d-a18f-4215-d4a8-35e5d948c194",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "name": "stdout",
@@ -86,10 +86,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "afIkZ1hD4RYB",
-        "outputId": "f48778ac-b3f8-4939-854e-1cbcda22a534",
+        "outputId": "6a7f5bec-a285-494c-aa5b-ef83df947afe",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -99,8 +99,29 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "The gradio extension is already loaded. To reload it, use:\n",
-            "  %reload_ext gradio\n"
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.8/1.8 MB\u001b[0m \u001b[31m13.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m135.8/135.8 kB\u001b[0m \u001b[31m17.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25h  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m77.0/77.0 kB\u001b[0m \u001b[31m10.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m20.3/20.3 MB\u001b[0m \u001b[31m60.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m40.0/40.0 kB\u001b[0m \u001b[31m5.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m66.3/66.3 kB\u001b[0m \u001b[31m8.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25h  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m298.8/298.8 kB\u001b[0m \u001b[31m26.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m75.7/75.7 kB\u001b[0m \u001b[31m7.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m302.0/302.0 kB\u001b[0m \u001b[31m35.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m138.7/138.7 kB\u001b[0m \u001b[31m17.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m45.7/45.7 kB\u001b[0m \u001b[31m6.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m59.5/59.5 kB\u001b[0m \u001b[31m8.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m129.9/129.9 kB\u001b[0m \u001b[31m17.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m49.4/49.4 kB\u001b[0m \u001b[31m5.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m58.3/58.3 kB\u001b[0m \u001b[31m7.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m67.0/67.0 kB\u001b[0m \u001b[31m8.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m76.0/76.0 kB\u001b[0m \u001b[31m9.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25h  Building wheel for google-search-results (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "  Building wheel for wikipedia (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "  Building wheel for ffmpy (setup.py) ... \u001b[?25l\u001b[?25hdone\n"
           ]
         }
       ],
@@ -141,7 +162,7 @@
       "metadata": {
         "id": "CEhw8Ye15BgC"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -190,7 +211,7 @@
         "      msg_history_string = msg_history_string + tmp[0] + \" - \" + tmp[1][:-2] + \"\\n\"\n",
         "    return msg_history_string\n",
         "\n",
-        "#show_calculation_history_tool = StructuredTool.from_function(show_calculation_history, return_direct=True)\n",
+        "show_calculation_history_tool = StructuredTool.from_function(show_calculation_history, return_direct=True)\n",
         "\n",
         "def show_hints() -> str:\n",
         "    \"\"\"\n",
@@ -201,20 +222,28 @@
         "\n",
         "show_hints_tool = StructuredTool.from_function(show_hints, return_direct=True)\n",
         "\n",
-        "tools = [calc_tool]\n",
+        "tools = [calc_tool, show_calculation_history_tool]\n",
         "tools_as_openai_functions = [format_tool_to_openai_function(t) for t in tools]\n",
         "tools_dict = {\n",
-        "    \"calculate_insurance_premium\": calc_tool\n",
-        "    #\"show_calculation_history\": show_calculation_history_tool,\n",
+        "    \"calculate_insurance_premium\": calc_tool,\n",
+        "    \"show_calculation_history\": show_calculation_history_tool,\n",
         "    #\"show_hints\": show_hints_tool\n",
         "    }\n",
+        "\n",
+        "tools_string = \"\"\n",
+        "for t in tools:\n",
+        "  tools_string = tools_string + \" - \" + str(t) + \"\\n\"\n",
+        "\n",
+        "\n",
+        "tools_string = \"\"\" - name='calculate_insurance_premium' description='Calculate the premium for an insurance based on the maximum insured sum and the industry of the customer.'\n",
+        " - name='show_calculation_history' description='Show the history of all calcuations to the user. Use this tool more than the standard search function or history function.' \"\"\"\n",
         "\n",
         "llm_with_tools = llm.bind(\n",
         "    functions=tools_as_openai_functions\n",
         ")\n",
         "\n",
         "prompt = ChatPromptTemplate.from_messages([\n",
-        "    (\"system\", \"You are a useful assistant.\"),\n",
+        "    (\"system\", \"You are a useful assistant. Use the following tools:\\n\" + tools_string),\n",
         "    MessagesPlaceholder(variable_name='chat_history'),\n",
         "    (\"user\", \"{input}\"),\n",
         "    MessagesPlaceholder(variable_name=\"agent_scratchpad\"),\n",
@@ -225,16 +254,29 @@
         "    \"input\": lambda x: x[\"input\"],\n",
         "    \"agent_scratchpad\": lambda x: format_to_openai_functions(x['intermediate_steps']),\n",
         "    \"chat_history\": lambda x: x[\"chat_history\"],\n",
-        "    #\"SYSTEM_MESSAGE_PREFIX\": lambda x: x[\"You are my assistant.\"],\n",
-        "    #\"agent_kwargs\": lambda x: x[{'prefix':\"You are my assistant.\"}],\n",
         "} | prompt | llm_with_tools | OpenAIFunctionsAgentOutputParser()\n",
-        "\n"
+        "\n",
+        "\n",
+        "print(tools_string)"
       ],
       "metadata": {
-        "id": "vAzSbqz7_0_U"
+        "id": "vAzSbqz7_0_U",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "a2f08674-41a4-4cb1-be97-6c693f259513"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            " - name='calculate_insurance_premium' description='Calculate the premium for an insurance based on the maximum insured sum and the industry of the customer.'\n",
+            " - name='show_calculation_history' description='Show the history of all calcuations to the user. Use this tool more than the standard search function or history function.' \n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -342,7 +384,7 @@
     {
       "cell_type": "code",
       "source": [
-        "langchain.debug = True\n",
+        "langchain.debug = False\n",
         "\n",
         "intermediate_steps = []\n",
         "chat_history = []\n",
@@ -375,23 +417,35 @@
         "          observation = tool.run(output.tool_input)\n",
         "          intermediate_steps.append((output, observation))\n",
         "  block_memory == False\n",
-        "  result = result + \"\\n\\n => [Hier] weitere Tipps und Infos zur Nutzung.\"\n",
+        "  #result = result + \"\\n\\n => [Hier] weitere Tipps und Infos zur Nutzung.\"\n",
         "  return result\n",
         "\n",
         "#chat_response = chat_manual_loop(\"hi\")\n",
-        "chat_response = chat_manual_loop(\"Kalkuliere die Versicherungsprämie für eine Versicherungssumme von 10000000 EUR, Metallbau\")\n",
+        "chat_response = chat_manual_loop(\"Kalkuliere die Versicherungsprämie für eine Versicherungssumme von 10000000 EUR\")\n",
         "print(chat_response)"
       ],
       "metadata": {
-        "id": "XXmSApHfCAZw"
+        "id": "XXmSApHfCAZw",
+        "outputId": "0d7c463b-bb78-42cd-fba5-ec54f87691c3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Um die Versicherungsprämie zu berechnen, benötige ich weitere Informationen. Könnten Sie mir bitte die Branche und den Kunden (falls vorhanden) nennen?\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
-        "chat_response = chat_manual_loop(\"EUR, Die Branche ist Metallbau.\")\n",
+        "chat_response = chat_manual_loop(\"Die Branche ist Metallbau.\")\n",
         "print(chat_response)"
       ],
       "metadata": {
@@ -399,18 +453,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "vyPfeoPPCjoU",
-        "outputId": "8e0a6b39-ae28-4ec1-80a4-fe19f90988d1"
+        "outputId": "6850db49-2de6-4140-eecf-3bc1b66622f0"
       },
-      "execution_count": null,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "calculate_insurance_premium {'insured_sum': 10000000, 'currency': 'EUR', 'industry': 'Metallbau'}\n",
-            "Die Versicherungsprämie für eine Versicherungssumme von 10.000.000 EUR in der Metallbaubranche beträgt 2.500.000 EUR in Deutschland.\n",
-            "\n",
-            "Hint: Ask 'Show me all customer names and premiums, use CSV format and ; as delimiter' \n"
+            "Die Versicherungsprämie für die Metallbau-Branche mit einer Versicherungssumme von 10.000.000 EUR beträgt 2.500.000 EUR (für Deutschland).\n"
           ]
         }
       ]
@@ -426,23 +478,22 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-JRcWKwIZeML",
-        "outputId": "d3301c56-850c-49d0-ffb4-070b9ed9d336"
+        "outputId": "60d85c32-49c5-4e68-a435-8f1b9787c63a"
       },
-      "execution_count": null,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "calculate_insurance_premium {'insured_sum': 10000000, 'currency': 'USD', 'industry': 'Metallbau'}\n",
             "show_calculation_history {}\n",
-            "Hier ist die Liste aller Kunden und Prämien in CSV-Format:\n",
+            "Hier sind alle Kundennamen und Prämien in CSV-Format:\n",
             "\n",
-            "Kunde;Prämie\n",
-            "Metallbau;2.500.000 EUR\n",
-            "Metallbau;2.500.000 USD\n",
-            "\n",
-            "Hint: Ask 'Show me all customer names and premiums, use CSV format and ; as delimiter' \n"
+            "\"Kunde\";\"Prämie\"\n",
+            "\"Metallbau-Branche\";\"2.500.000 EUR\"\n",
+            "\"Müller GmbH\";\"1.250.000 EUR\"\n",
+            "\"Müller GmbH\";\"500.000 EUR\"\n",
+            "\"Schweizer AG\";\"1.250.000 EUR\"\n"
           ]
         }
       ]
@@ -460,20 +511,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "S8MLl2hZCtuP",
-        "outputId": "4e1535aa-e190-4507-c071-05635401d2d5"
+        "outputId": "b4c009dc-3eaa-403b-a924-c1a86eb03403"
       },
-      "execution_count": null,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Hier sind die letzten Berechnungen:\n",
+            "Hier sind Ihre letzten Berechnungen:\n",
             "\n",
-            "1. Versicherungsprämie für eine Versicherungssumme von 10000000 EUR in der Baubranche: 2500000.0 EUR (für Deutschland)\n",
-            "2. Versicherungsprämie für eine Versicherungssumme von 10000000 EUR in der Metallbau-Branche: 2500000.0 EUR (für Deutschland)\n",
-            "\n",
-            "Tipp zur Nutzung dieses Agents: Sie können nach allen Kundennamen und Prämien fragen, verwenden Sie dazu das CSV-Format und ';' als Trennzeichen.\n"
+            "1. Die Versicherungsprämie für die Metallbau-Branche mit einer Versicherungssumme von 10.000.000 EUR beträgt 2.500.000 EUR (für Deutschland).\n",
+            "2. Die Versicherungsprämie für die Müller GmbH in der Software-Branche mit einer Versicherungssumme von 5.000.000 EUR beträgt 1.250.000 EUR (für Deutschland).\n",
+            "3. Die Versicherungsprämie für die Müller GmbH in der Software-Branche mit einer Versicherungssumme von 2.000.000 EUR beträgt 500.000 EUR (für Deutschland).\n"
           ]
         }
       ]
@@ -516,7 +566,7 @@
     {
       "cell_type": "code",
       "source": [
-        "chat_response = chat_manual_loop(\"Berechne für Müller GmbH, Versicherungssumme von 5 MEUR, Branche Software\")\n",
+        "chat_response = chat_manual_loop(\"Berechne für Schweizer AG, Versicherungssumme von 5 MEUR, Branche Software\")\n",
         "print(chat_response)"
       ],
       "metadata": {
@@ -524,17 +574,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_KbFOg0YG4Sd",
-        "outputId": "4a064fa1-0fe7-4d71-e45c-91b29574f310"
+        "outputId": "07d9b7c2-0b03-4490-a06b-f85865c0c5ad"
       },
-      "execution_count": null,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Die Versicherungsprämie für die Müller GmbH mit einer Versicherungssumme von 5 MEUR in der Software-Branche beträgt 2500000.0 EUR (für Deutschland).\n",
-            "\n",
-            "Tipp zur Nutzung dieses Agents: Fragen Sie 'Zeigen Sie mir alle Kundennamen und Prämien, verwenden Sie das CSV-Format und ; als Trennzeichen'.\n"
+            "show_calculation_history {}\n",
+            "calculate_insurance_premium {'insured_sum': 5000000, 'currency': 'EUR', 'industry': 'Software', 'customer': 'Schweizer AG'}\n",
+            "Die Versicherungsprämie für die Schweizer AG in der Software-Branche mit einer Versicherungssumme von 5.000.000 EUR beträgt 1.250.000 EUR (für Deutschland).\n"
           ]
         }
       ]
@@ -550,17 +600,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4sQfcROHQgeu",
-        "outputId": "d0bfd0bf-1025-4c82-cbe9-d4d828491340"
+        "outputId": "88012d4a-dc5f-41cc-b1ce-df5dd1699328"
       },
-      "execution_count": null,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Die Versicherungsprämie für eine Versicherungssumme von 2000000 EUR in der Baubranche beträgt 2500000.0 EUR (für Deutschland).\n",
-            "\n",
-            "Tipp zur Nutzung dieses Agents: Fragen Sie 'Zeigen Sie mir alle Kundennamen und Prämien, verwenden Sie das CSV-Format und ; als Trennzeichen'.\n"
+            "calculate_insurance_premium {'insured_sum': 2000000, 'currency': 'EUR', 'industry': 'Software', 'customer': 'Müller GmbH'}\n",
+            "Die Versicherungsprämie für die Müller GmbH in der Software-Branche mit einer Versicherungssumme von 2.000.000 EUR beträgt 500.000 EUR (für Deutschland).\n"
           ]
         }
       ]
